# foxess-control

./: .gitignore  .pre-commit-config.yaml  API_DEVIATIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EXAMPLES.md  FAQ.md  README.md  TROUBLESHOOTING.md  conftest.py  hacs.json  pyproject.toml  repository.yaml
.githooks/: check-module-size  pre-push
.github/workflows/: addon.yml  e2e.yml  flaky-tests.yml  hacs.yml  lint.yml  release.yml
.semgrep/: foxess-architecture.yaml
custom_components/foxess_control/: __init__.py  _helpers.py  _services.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  (+8 more)
docs/: deferred-discharge-sim.html  lovelace-examples.md  modbus-viability.md  multi-brand-viability.md  ux-improvements.md  wasm-signature.md
e2e/: Containerfile  __init__.py  conftest.py  ha_client.py  selectors.py  test_e2e.py  test_ui.py
foxess-control/: CHANGELOG.md  DOCS.md  Dockerfile  apparmor.txt  config.yaml  run.sh
scripts/: collect_events.py  collect_ha_session.py  knowledge_audit.py  test_summary.py
simulator/: __init__.py  __main__.py  model.py  server.py
smart_battery/: adapter.py  algorithms.py  config_flow_base.py  const.py  coordinator.py  events.py  listeners.py  replay.py  sensor_base.py  services.py  session.py  testing.py
systemd/: foxess-collect-ha.env.example  foxess-collect-ha.service  foxess-soak-run.sh  foxess-soak.service  foxess-soak.timer
tests/: conftest.py  test_binary_sensor.py  test_card_entity_resolution.py  test_card_translations.py  test_charge_deferred_sensor.py  test_charge_redeferral.py  test_circuit_breaker.py  test_client.py  test_cold_temp_limit.py  test_collect_ha_session.py  test_config_flow.py  test_coordinator.py  test_docs_jekyll_liquid.py  test_domain_data.py  test_e2e_page_fixture.py  test_e2e_screenshot_card.py  test_entity_mode.py  test_events.py  test_export_limit.py  test_ha_client.py  test_init.py  test_inverter.py  test_performance.py  test_playwright_fixture_isolation.py  test_realtime_ws.py  test_replay.py  test_sensor.py  test_sensor_listener_safety.py  test_services.py  test_simulator_model.py  test_smart_battery_agnostic.py  test_smart_battery_algorithms.py  test_smart_battery_sync.py  test_soak_results_db.py  test_structured_logging.py  test_subprocess_stdout_deadlock.py  test_taper.py  test_taper_observation.py  test_web_session.py  test_ws_rest_poll_cadence.py
(+79 files in other folders)
