[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foxess-inverter"
version = "0.1.0"
description = "Python client for FoxESS Cloud API - inverter management"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "pre-commit>=3.0",
    "mypy>=1.15",
    "ruff>=0.11",
    "types-requests>=2.28",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
extend-exclude = ["*.json", "*.md"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]
